avoid disalignement on multiple rows

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -185,7 +185,7 @@ nav a:hover {
     nav a {
         float: left;
         width: 27%;
-        margin: 0 1.7%;
+        margin: 0;
         padding: 25px 2%;
         margin-bottom: 0;
     }
